<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup launch for the UAV obstacle avoidance stack</description>
  <maintainer email="shantam.sharma98@gmail.com">shantam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>uav_depth_fusion</exec_depend>
  <exec_depend>uav_mapping</exec_depend>
  <exec_depend>uav_planner_interface</exec_depend>
  <exec_depend>uav_local_planner</exec_depend>
  <exec_depend>uav_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
