<?xml version="1.0"?>
<package format="3">
  <name>uav_local_planner</name>
  <version>0.1.0</version>
  <description>3DVFH+ local planner and waypoint manager</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>uav_planner_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>