<?xml version="1.0"?>
<package format="3">
  <name>uav_mapping</name>
  <version>0.1.0</version>
  <description>Octomap-based 3D mapping for UAV</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>